# app/Http/Controllers/Api/v1/HomeController.php
@@ -5,8 +5,10 @@ namespace App\Http\Controllers\Api\V1;
 use App\Helpers\ApiConstants;
 use App\Http\Controllers\Controller;
 use App\Repositories\ProductCategoryRepository;
+use App\Repositories\ProductSearchRepository;
 use App\Repositories\RecentlyViewedProductRepository;
 use App\Transformers\ProductCategoryTransformer;
+use App\Transformers\ProductSearchTransformer;
 use App\Transformers\RecentlyViewedProductTransformer;
 use Illuminate\Http\Request;
 
@@ -14,10 +16,15 @@ class HomeController extends Controller
 {
     private $recentlyViewedRepo;
     private $productCategoryRepo;
-    public function __construct(RecentlyViewedProductRepository $recentlyViewedProductRepo , ProductCategoryRepository $productCategoryRepository)
+    private $productSearchRepo;
+    public function __construct(RecentlyViewedProductRepository $recentlyViewedProductRepo , 
+                                ProductCategoryRepository $productCategoryRepository,
+                                ProductSearchRepository $productSearchRepository
+                                )
     {
         $this->recentlyViewedRepo = $recentlyViewedProductRepo;
         $this->productCategoryRepo = $productCategoryRepository;
+        $this->productSearchRepo = $productSearchRepository;
     }
 
 
@@ -93,7 +100,7 @@ class HomeController extends Controller
      *   tags={"Home"},
      *   summary="List product categories",
      *   operationId="product-categories",
-     * akip
+     *
      * 
      *   @OA\Response(
      *      response=200,
@@ -142,7 +149,7 @@ class HomeController extends Controller
      *   tags={"Home"},
      *   summary="Show sliders and images",
      *   operationId="slider-and-images",
-     * akip
+     * 
      * 
      *   @OA\Response(
      *      response=200,
@@ -175,15 +182,16 @@ class HomeController extends Controller
      */
     public function sliderAndImages(Request $request)
     {
+        return validResponse("Not implemented yet");
     }
 
     /**
      * @OA\Get(
-     ** path="/v1/home/trending",
+     ** path="/v1/home/trending-searches",
      *   tags={"Home"},
-     *   summary="Show trending products and categories",
+     *   summary="Show trending searches for products and categories",
      *   operationId="trending",
-     * akip
+     * 
      * 
      *   @OA\Response(
      *      response=200,
@@ -214,49 +222,19 @@ class HomeController extends Controller
      *
      * @return \Illuminate\Http\Response
      */
-    public function trending(Request $request)
+    public function trendingSearches(Request $request)
     {
+        try {
+            $data = $this->productSearchRepo->where("results_count" ,">" , 0 )
+                    ->orderby("id", "desc")->paginate(ApiConstants::PAGINATION_SIZE_API);
+            $transformer = new ProductSearchTransformer;
+            return validResponse("Product categories retrieved" , $transformer->prepare($data));
+        } catch (\Exception $e) {
+            $message = 'Something went wrong while processing your request.';
+            return problemResponse($message, ApiConstants::SERVER_ERR_CODE, $request, $e);
+        }
     }
 
 
-     /**
-     * @OA\Get(
-     ** path="/v1/home/trending",
-     *   tags={"Home"},
-     *   summary="Show trending products and categories",
-     *   operationId="trending",
-     * akip
-     * 
-     *   @OA\Response(
-     *      response=200,
-     *       description="Success",
-     *      @OA\MediaType(
-     *           mediaType="application/json",
-     *      )
-     *   ),
-     *   @OA\Response(
-     *      response=401,
-     *       description="Unauthenticated"
-     *   ),
-     *   @OA\Response(
-     *      response=400,
-     *      description="Bad Request"
-     *   ),
-     *   @OA\Response(
-     *      response=404,
-     *      description="Not found"
-     *   ),
-     *      @OA\Response(
-     *          response=403,
-     *          description="Forbidden"
-     *      )
-     *)
-     **/
-    /**
-     *
-     * @return \Illuminate\Http\Response
-     */
-    public function dealOfDay(Request $request)
-    {
-    }
+     
 }
